# iceberg-verification

./: .gitignore  DESIGN.md  README.md
.github/workflows/: conformance.yml
fixtures/v1_create_append_scan/: expected.json  fixture.yaml
fixtures/v1_empty_table_scan/: expected.json  fixture.yaml
fixtures/v1_int_vs_long/: expected.json  fixture.yaml
fixtures/v1_multi_append_lineage/: expected.json  fixture.yaml
fixtures/v1_required_optional_nulls/: expected.json  fixture.yaml
fixtures/v1_time_travel_ordinal/: expected.json  fixture.yaml
fixtures/v2_append_posdelete_timetravel/: expected.json  fixture.yaml
fixtures/v2_append_timetravel/: expected.json  fixture.yaml
fixtures/v2_delete_all_rows/: expected.json  fixture.yaml
fixtures/v2_delete_in_predicate/: expected.json  fixture.yaml
fixtures/v2_delete_range_and/: expected.json  fixture.yaml
fixtures/v2_delete_then_reappend/: expected.json  fixture.yaml
fixtures/v2_multi_delete_sequence/: expected.json  fixture.yaml
fixtures/v2_read_append_timetravel/: expected.json  fixture.yaml
fixtures/v2_read_append_timetravel/bytes/: ROOT
fixtures/v2_read_append_timetravel/bytes/default.db/t/data/: 00000-0-0822c88a-9bd5-4e8b-8bf2-84b06044746d-00001.parquet  00000-0-3f8efc1d-1220-42e1-82e7-5bded1b8ae24-00001.parquet
fixtures/v2_read_append_timetravel/bytes/default.db/t/metadata/: 00000-b6fc4eae-1c35-463a-9252-e7326bc5fc31.metadata.json  00001-911472fc-11a9-481f-9517-6b9afbc3f4f0.metadata.json  00002-90bb89d1-37af-4ca4-b24a-2f99d52bd063.metadata.json  0822c88a-9bd5-4e8b-8bf2-84b06044746d-m1.avro  3f8efc1d-1220-42e1-82e7-5bded1b8ae24-m1.avro  snap-3022689860945069661-0-0822c88a-9bd5-4e8b-8bf2-84b06044746d.avro  snap-8190990186656353016-0-3f8efc1d-1220-42e1-82e7-5bded1b8ae24.avro
fixtures/v2_types_decimal_uuid_binary_read/: expected.json  fixture.yaml  seed.yaml
fixtures/v2_types_decimal_uuid_binary_read/bytes/: ROOT
fixtures/v2_types_decimal_uuid_binary_read/bytes/default/t/data/: data-0-127044766555416.parquet
fixtures/v2_types_decimal_uuid_binary_read/bytes/default/t/metadata/: 00000-921e5245-c08b-4db9-9e30-e75abce36acf.metadata.json  00001-b25d4eaa-24d4-44c1-8da4-753017f20605.metadata.json  727ce0bd-8c52-466f-bc01-b0927bc00e20-m0.avro  snap-825558586185674020-1-727ce0bd-8c52-466f-bc01-b0927bc00e20.avro
fixtures/v2_types_temporal_read/: expected.json  fixture.yaml  seed.yaml
fixtures/v2_types_temporal_read/bytes/: ROOT
fixtures/v2_types_temporal_read/bytes/default/t/data/: data-0-127042013423041.parquet
fixtures/v2_types_temporal_read/bytes/default/t/metadata/: 00000-08779785-d7ef-44c6-aa83-3b8d1b78b0c9.metadata.json  00001-f528246e-2781-4127-8ca0-6fefdb7b6eaf.metadata.json  cb6500af-50c5-4a84-af02-731ec190c4e9-m0.avro  snap-4468807567077415298-1-cb6500af-50c5-4a84-af02-731ec190c4e9.avro
fixtures/v3_add_column_divergent_defaults/: expected.json  fixture.yaml
fixtures/v3_compaction_noop/: fixture.yaml
fixtures/v3_promote_int_to_long/: expected.json  fixture.yaml
fixtures/v3_promote_int_to_long_timetravel/: expected.json  fixture.yaml
fixtures/v3_rename_then_add_reused_name/: expected.json  fixture.yaml
fixtures/v3_schema_evolution_defaults/: expected.json
fixtures/v3_types_transforms/: expected.json  fixture.yaml
orchestrator/: compare.go  compare.py  go.mod  main.go  report.go  run.py  supports.go  supports.py
orchestrator/fuzz/: main.go  readdiff.go  shrink.go
orchestrator/generator/: emit.go  gen.go  state.go
runners/go/: arrow_build.go  arrow_decode.go  emit.go  go.mod  go.sum  interpret.go  literals.go  llog.go  main.go  materialize.go  schema.go  supports.yaml
runners/java/: README.md  build.gradle  settings.gradle  supports.yaml
runners/java/src/main/java/org/apache/iceberg/verification/: Decode.java  Emit.java  Interpret.java  LLog.java  Materialize.java  PositionDeletes.java  PredicateMatcher.java  Runner.java  SchemaBuilder.java  TypedValue.java
runners/rust/: Cargo.toml  README.md  supports.yaml
runners/rust/src/: arrow_build.rs  arrow_decode.rs  emit.rs  interpret.rs  llog.rs  main.rs  materialize.rs  schema.rs  values.rs
site/: app.js  index.html  report.json  style.css
spec/: expected-output.schema.json  l-log.schema.json  runner-contract.md
specs/v3_schema_evolution_defaults/: spec.yaml
tools/: materialize.py  mint.py
